force-app/main/default/objects/Square_Setting__mdt/Square_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Contains Setting related to Square Payment API</description>
    <label>Square Setting</label>
    <pluralLabel>Square Settings</pluralLabel>
</CustomObject>