force-app/main/default/objects/Square_Setting__mdt/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <description>Square Application Id</description>
    <inlineHelpText>Square Application Id</inlineHelpText>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>