force-app/main/default/objects/Square_Setting__mdt/fields/Payment_Form_JS__c.field-meta.xml
<CustomField>
    <fullName>Payment_Form_JS__c</fullName>
    <description>The square payment form Javascript URL</description>
    <label>Payment_Form_JS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>