force-app/main/default/objects/Square_Setting__mdt/fields/PaymentEndpoint__c.field-meta.xml
<CustomField>
    <fullName>PaymentEndpoint__c</fullName>
    <description>The Square API Payment endpoint</description>
    <label>Payment Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>