force-app/main/default/objects/Square_Setting__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>The Square Version</description>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>